[package]
name = "compose-tunnel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories.workspace = true
portpicker.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
